Fix spacing in tool panel labels

--- a/client/galaxy/style/scss/base.scss
+++ b/client/galaxy/style/scss/base.scss
@@ -1522,7 +1522,8 @@ div.toolSectionTitle {
 }
 
 div.toolPanelLabel {
-    @extend .m-2;
+    @extend .mt-3;
+    @extend .mb-2;
     font-weight: bold;
     color: $gray-600;
     text-transform: uppercase;
